tests/ui/associated-item/issue-87638.stderr
error[E0576]: cannot find associated type `Output` in trait `Trait`
  --> $DIR/issue-87638.rs:17:26
   |
LL |     type Target;
   |     ------------ associated type `Target` defined here
...
LL |     let _: <S as Trait>::Output;
   |                          ^^^^^^
   |                          |
   |                          not found in `Trait`
   |                          help: maybe you meant this associated type: `Target`

error[E0576]: cannot find method or associated constant `BAR` in trait `Trait`
  --> $DIR/issue-87638.rs:20:27
   |
LL |     const FOO: usize;
   |     ----------------- associated constant `FOO` defined here
...
LL |     let _ = <S as Trait>::BAR;
   |                           ^^^
   |                           |
   |                           not found in `Trait`
   |                           help: maybe you meant this associated constant: `FOO`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0576`.
